--- a/src/styles/SquintApp.css
+++ b/src/styles/SquintApp.css
@@ -36,6 +36,9 @@
   --corner-radius-large: 0.8em;
   --corner-radius-medium: 0.6em;
   --corner-radius-small: 0.4em;
+
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 #SquintApp #Panel {
@@ -66,7 +69,7 @@
   display: "none";
   position: absolute;
   left: 1em;
-  top: 4em;
+  top: 3em;
   width: 20%;
   border: solid 1px;
   border-color: white;
@@ -78,13 +81,13 @@
 
 #SquintApp #ViewersPanelDiv {
   position: absolute;
-  right: 10px;
-  top: 50px;
-  width: 20%;
-  height: 60%;
+  right: 1em;
+  top: 3em;
+  width: 30em;
+  height: 40em;
   border: solid;
   border-color: lightgray;
-  border-width: 5px;
+  border-width: 0.5em;
   background-color: lightgray;
   margin: 0px;
   display: none;
@@ -99,23 +102,24 @@
   background-color: lightskyblue;
   border-top-left-radius: var(--corner-radius-small);
   border-top-right-radius: var(--corner-radius-small);
-  padding: 4px;
+  padding: 0.5em;
 }
 
 #SquintApp #ViewersPanelDiv #ViewersListBox {
   flex: 1 0 auto; /* grow */
+  cursor: move;
 }
 
 #SquintApp #ViewersPanelDiv #ChatListBox {
   flex: 1 0 auto; /* grow */
+  cursor: move;
 }
 
 #SquintApp #ViewersPanelDiv #ChatInputText {
 }
 
 #SquintApp #ViewersPanelDiv .ListBoxClass {
-  cursor: default;
-  margin-bottom: 5px;
+  margin-bottom: 0.5em;
 }
 
 #SquintApp #NotificationDiv {
@@ -125,21 +129,11 @@
   left: 50%;
   height: 2 em;
   text-align: right;
-  opacity: 0;
-  animation: fadeOut ease 3s;
-  -webkit-animation: fadeOut ease 3s;
+  animation: fadeOut 3s ease 1s forwards;
   text-shadow: 0 0 3px #ffffff; /* white glow */
 }
 
 @keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@-webkit-keyframes fadeOut {
   0% {
     opacity: 1;
   }
